<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Item Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_reminder">Track</string>
    <string name="action_items_master">Items</string>
    <string name="hello_world">Hello world!</string>
    <string name="addItemHint">New Item</string>
    <string name="addNewItemButton">Add New Item</string>
    <string name="saveItemButton">Save</string>
    <string name="RemindInDays">Estimated usage(in days)</string>
    <string name="title_activity_reminder">Items Due</string>
    <string name="title_activity_item_master">Items Usage</string>
    <string name="Today"> Today</string>
    <string name="ThisWeek"> This Week</string>
    <string name="Later"> Later</string>
    <string name="QuantityBought">Quantity Bought</string>
    <string name="BuyDate">Buy date</string>
    <string name="title_activity_settings">Settings</string>
	<string name="pref_send_notification">Send Notification</string>
    <string name="pref_send_notification_summary">Notify when items running low</string>
    <string name="pref_notification_before_summary">Days before notification should appear</string>
    <string name="pref_notification_before">Notify before</string>
    <string name="pref_notification">Notification Settings</string>
    <string name="pref_notification_time_summary">Time at which you would like to be noitified</string>
    <string name="pref_notification_time">Notification Time</string>
    <string name="cancelButton">Cancel</string>
     
</resources>
