<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<EditText
  android:id="@+id/txtName"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:hint="@string/addItemHint">
  <requestFocus />
</EditText>

<EditText
    android:id="@+id/txtRemindInDays"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="number" 
    android:hint="@string/RemindInDays">
</EditText>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btnSaveItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#00ffffff"
        android:textColor="#ff000000"
        android:text="@string/saveItemButton"
        android:drawableLeft="@drawable/ic_cab_done_holo_light" 
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#00ffffff"
        android:textColor="#ff000000"
        android:drawableLeft="@drawable/ic_action_remove"
        android:text="@string/cancelButton" 
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>

        
</LinearLayout>
