<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/QuantityBought" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/QuantityBought"
        android:inputType="number" 
        android:paddingBottom="10dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/BuyDate" />

    <DatePicker
        android:id="@+id/dpBuyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btnSaveItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#00ffffff"
        android:textColor="#ff000000"
        android:text="@string/saveItemButton"
        android:drawableLeft="@drawable/ic_cab_done_holo_light" 
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#00ffffff"
        android:textColor="#ff000000"
        android:drawableLeft="@drawable/ic_action_remove"
        android:text="@string/cancelButton" 
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>
</LinearLayout>